--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <nav class="header-navigation">
             <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./index.html">Portfolio</a></li>
-                <li><a href="./index.html">Contacts</a></li>
+            <ul class="header-menu">
+                <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
+                <li class="header-item"><a class="header-link" href="./index.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+            <ul class="header-cont">
+                <li class="header-cont-inform"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-cont-inform"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header> 
@@ -91,7 +96,6 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
-            <button></button>
         </section>
     </main>
     <footer>
