--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,700;0,900;1,400;1,500&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" class="header-logo"> <span class="header-logo-accent">Web</span>Studio</a>
             <ul class="header-menu">
                 <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
                 <li class="header-item"><a class="header-link" href="./index.html">Portfolio</a></li>
