--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo"> <span class="header-logo-accent">Web</span>Studio</a>
+            <a href="./index.html"><span class="header-logo-accent">Web</span> <span class="header-logo">Studio</span></a>
             <ul class="header-menu">
-                <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
-                <li class="header-item"><a class="header-link" href="./index.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-link" href="./index.html">Contacts</a></li>
+                <li class="header-item">
+                    <a class="header-link" href="./index.html">Studio</a></li>
+                <li class="header-item">
+                    <a class="header-link" href="./index.html">Portfolio</a></li>
+                <li class="header-item">
+                    <a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
