--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header class="header">
         <nav class="header-navigation">
             <a href="./index.html"><span class="header-logo-accent">Web</span> <span class="header-logo">Studio</span></a>
-            <ul class="header-menu">
+            <ul class="header-menu list">
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Studio</a></li>
+                    <a class="header-link link" href="./index.html">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Portfolio</a></li>
+                    <a class="header-link link" href="./index.html">Portfolio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Contacts</a></li>
+                    <a class="header-link link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
