--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html"><span class="header-logo-accent">Web</span> <span class="header-logo">Studio</span></a>
+            <a href="./index.html" > Web <span class="header-logo ">Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link link" href="./index.html">Studio</a></li>
