--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </ul>
         </nav>
         <address>
-            <ul class="header-cont">
-                <li class="header-cont-inform"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-cont-inform"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+            <ul class="header-cont list">
+                <li class="header-cont-inform link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-cont-inform link"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header> 
@@ -39,7 +39,7 @@
         </section>
         <section>
             <h2>adventer</h2>
-            <ul>
+            <ul class="header-adventer list"> 
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business
