--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="site-nav">
-            <a href="./index.html" class=""> Web <span class="header-title">Studio</span></a>
+            <a href="./index.html" class="title-header"> Web <span class="header-title">Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link link" href="./index.html">Studio</a></li>
