--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
 
 </head>
 <body>
-    <header>
-        <nav class="site-nav">
-            <a href="./index.html" class="title-header"> Web <span class="header-title">Studio</span></a>
+    <header class="header">
+        <nav class="header-nav">
+            <a href="./index.html" class="header-logo"> WebStudio</a>
             <ul class="header-menu list">
                 <li class="header-item">
-                    <a class="header-link link" href="./index.html">Studio</a></li>
+                    <a class="header-link" href="./index.html">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./index.html">Portfolio</a></li>
+                    <a class="header-link" href="./index.html">Portfolio</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./index.html">Contacts</a></li>
+                    <a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul class="header-cont list">
-                <li class="header-cont-inform link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-cont-inform link"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+            <ul class="header-cont">
+                <li class="header-cont-inform"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-cont-inform"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header> 
     <main>
-        <section class="">
-            <h1 class="">Effective Solutions
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions
                 for Your Business</h1>
-                <button type="button">Order Service</button>
+                <button type="button" class="hero-btn">Order Service</button>
         </section>
         <section>
             <h2 class="">adventer</h2>
@@ -63,15 +63,15 @@
             </ul>
         </section>
         <section>
-            <h2 class="">What are we doing</h2>
+            <h2 class="setion-img">What are we doing</h2>
             <ul class="">
-                <li class="">
+                <li>
                     <img src="./images/comp-min.jpg" width="360" alt="comp" />
                 </li>
-                <li class="">
+                <li>
                     <img src="./images/tel-min.jpg" width="360" alt="tel" />
                 </li>
-                <li class="">
+                <li>
                     <img src="./images/arm-min.jpg" width="360" alt="arm" /> 
                 </li>
             </ul>
