--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@
                 for Your Business</h1>
                 <button type="button" class="hero-btn">Order Service</button>
         </section>
-        <section>
-            <h2 class="">adventer</h2>
-            <ul class="header-adventer list"> 
-                <li>
-                    <h3 class="title">Strategy</h3>
-                    <p class="text">Our goal is to identify the business
+        <section advantages>
+            <h2 class="">Advantages</h2>
+            <ul class="advantages-list list"> 
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle">Strategy</h3>
+                    <p class="advantages-item-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
-                    <h3 class="title">Punctuality</h3>
-                    <p class="text">Bring the key message to the brand's audience
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle">Punctuality</h3>
+                    <p class="advantages-item-text">Bring the key message to the brand's audience
                          for the best price within the shortest possible time.</p>
                 </li>
-                <li>                                                                                                                       
-                    <h3 class="title">Diligence</h3>
-                    <p class="text">Research and confirm brands that present the strongest digital growth opportunities 
+                <li class="advantages-item">                                                                                                                       
+                    <h3 class="advantages-subtitle">Diligence</h3>
+                    <p class="advantages-item-text">Research and confirm brands that present the strongest digital growth opportunities 
                         and minimize risk.</p>
                 </li>
-                <li>
-                    <h3 class="title">Technologies</h3>
-                    <p class="text">Design practice focused on digital experiences. 
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle">Technologies</h3>
+                    <p class="advantages-item-text">Design practice focused on digital experiences. 
                         We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2 class="setion-img">What are we doing</h2>
+            <h2 class="">What are we doing</h2>
             <ul class="">
                 <li>
                     <img src="./images/comp-min.jpg" width="360" alt="comp" />
