--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header class="header">
+    <header>
         <nav class="header-nav">
             <a href="./index.html" class="header-logo"> WebStudio</a>
             <ul class="header-menu list">
