--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"> WebStudio</a>
+            <a href="./index.html" class="header-logo"> <span>Web</span>Studio</a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link" href="./index.html">Studio</a></li>
@@ -38,7 +38,7 @@
                 <button type="button" class="hero-btn">Order Service</button>
         </section>
         <section advantages>
-            <h2 class="">Advantages</h2>
+            <h2 class="visually-hidden">Advantages</h2>
             <ul class="advantages-list list"> 
                 <li class="advantages-item">
                     <h3 class="advantages-subtitle">Strategy</h3>
@@ -66,13 +66,19 @@
             <h2 class="">What are we doing</h2>
             <ul class="">
                 <li>
-                    <img src="./images/comp-min.jpg" width="360" alt="comp" />
+                    <img src="./images/comp-min.jpg"
+                     width="360" 
+                     alt="comp" />
                 </li>
                 <li>
-                    <img src="./images/tel-min.jpg" width="360" alt="tel" />
+                    <img src="./images/tel-min.jpg"
+                     width="360" 
+                     alt="tel" />
                 </li>
                 <li>
-                    <img src="./images/arm-min.jpg" width="360" alt="arm" /> 
+                    <img src="./images/arm-min.jpg"
+                     width="360" 
+                     alt="arm" /> 
                 </li>
             </ul>
         </section>
