--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </nav>
         <address>
             <ul class="header-cont">
-                <li class="header-cont-inform"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-cont-inform"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+                <li class="header-cont-inform list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-cont-inform list"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header> 
@@ -62,20 +62,20 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2 class="">What are we doing</h2>
-            <ul class="">
-                <li>
+        <section class="title-img-doing">
+            <h2 class="title-doing">What are we doing</h2>
+            <ul class="title-img list">
+                <li class="title-img-item">
                     <img src="./images/comp-min.jpg"
                      width="360" 
                      alt="comp" />
                 </li>
-                <li>
+                <li class="title-img-item">
                     <img src="./images/tel-min.jpg"
                      width="360" 
                      alt="tel" />
                 </li>
-                <li>
+                <li class="title-img-item">
                     <img src="./images/arm-min.jpg"
                      width="360" 
                      alt="arm" /> 
