--- a/index.html
+++ b/index.html
@@ -83,34 +83,34 @@
             </ul>
         </section>
         <section id="team" class="team">
-            <h2 class="title-team">Our Team</h2>
+            <h2 class="title-ourteam">Our Team</h2>
             <ul class="team-list list">
-                <li class="">
+                <li class="team-list-img">
                     <img src="./images/mark-min.jpg" width="264" alt="mark"/>
-                    <h3 class="">Mark Guerrero</h3> 
-                    <p class="">Product Designer</p>
+                    <h3 class="img-title-team">Mark Guerrero</h3> 
+                    <p class="text-img-title">Product Designer</p>
                 </li>
-                <li class="">
+                <li class="team-list-img">
                     <img src="./images/tom-min.jpg" width="264" alt="tom"/>
-                    <h3 class="">Tom Ford</h3>
-                    <p class="">Frontend Developer</p>
+                    <h3 class="img-title-team">Tom Ford</h3>
+                    <p class="text-img-title">Frontend Developer</p>
                 </li>
-                <li class="">
+                <li class="team-list-img">
                     <img src="./images/camila-min.jpg" width="264" alt="camila"/>
-                    <h3 class="">Camila Garcia</h3>
-                    <p class="">Marketing</p>
+                    <h3 class="img-title-team">Camila Garcia</h3>
+                    <p class="text-img-title">Marketing</p>
                 </li>
-                <li class="">
+                <li class="team-list-img">
                     <img src="./images/daniel-min.jpg" width="264" alt="daniel"/>
-                    <h3 class="">Daniel Wilson</h3>
-                    <p class="">UI Designer</p>
+                    <h3 class="img-title-team">Daniel Wilson</h3>
+                    <p class="text-img-title">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer class="">
-        <a href="./index.html" class="">WebStudio</a>
-        <p class="">Increase the flow of customers and sales for your business with digital
+    <footer class="footer">
+        <a href="./index.html" class="footer-title link">WebStudio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
 </body>
