--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </nav>
         <address>
             <ul class="header-cont">
-                <li class="header-cont-inform list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-cont-inform list"><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+                <li class="header-cont-inform list"><a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-cont-inform list"><a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header> 
@@ -109,7 +109,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-title link">WebStudio</a>
+        <a href="./index.html" class="footer-title link"><span>Web</span>Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
