--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a href="./index.html" class="header-logo"> <span>Web</span>Studio</a>
             <ul class="header-menu list">
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Studio</a></li>
+                    <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Portfolio</a></li>
+                    <a class="header-link" href="./index.html" target="_blank">Portfolio</a></li>
                 <li class="header-item">
                     <a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
