--- a/portfolio.html
+++ b/portfolio.html
@@ -1,60 +1,11 @@
-.header-nav {
-}
-.header-logo {
-}
-.header-menu {
-}
-.list {
-}
-.header-item {
-}
-.header-link {
-}
-.header-cont {
-}
-.header-cont-inform {
-}
-.link {
-}
-.hero {
-}
-.hero-title {
-}
-.hero-btn {
-}
-.visually-hidden {
-}
-.advantages-list {
-}
-.advantages-item {
-}
-.advantages-subtitle {
-}
-.advantages-item-text {
-}
-.title-img-doing {
-}
-.title-doing {
-}
-.title-img {
-}
-.title-img-item {
-}
-.team {
-}
-.title-ourteam {
-}
-.team-list {
-}
-.team-list-img {
-}
-.img-title-team {
-}
-.text-img-title {
-}
-.footer {
-}
-.footer-title {
-}
-.footer-text {
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
