--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <header>
+        <nav class="header-nav">
+            <a href="./index.html" class="header-logo"> <span>Web</span>Studio</a>
+            <ul class="header-menu list">
+                <li class="header-item">
+                    <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
+                <li class="header-item">
+                    <a class="header-link" href="./index.html" target="_blank">Portfolio</a></li>
+                <li class="header-item">
+                    <a class="header-link" href="./index.html">Contacts</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul class="header-cont">
+                <li class="header-cont-inform list"><a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-cont-inform list"><a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
+    </header> 
+    <main>
+        <section>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <ul>
+                
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <a href="./index.html" class="footer-title link"><span>Web</span>Studio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital
+             marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
