--- a/portfolio.html
+++ b/portfolio.html
@@ -41,15 +41,51 @@
                 <li></li>
             </ul>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
+                <li>
+                    <img src=""/>
+                    <h3></h3> 
+                    <p></p>
+                </li>
             </ul>
         </section>
     </main>
