--- a/portfolio.html
+++ b/portfolio.html
@@ -40,51 +40,51 @@
                 <li></li>
                 <li></li>
             </ul>
-            <ul>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+            <ul class="">
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <im class=""g src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
-                <li>
-                    <img src=""/>
-                    <h3></h3> 
-                    <p></p>
+                <li class="">
+                    <img class="" src="" alt=""/>
+                    <h2 class=""></h2> 
+                    <p class=""></p>
                 </li>
             </ul>
         </section>
