--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                     <a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul class="header-cont">
                 <li class="header-cont-inform list"><a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-cont-inform list"><a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
@@ -32,59 +32,69 @@
         </address>
     </header> 
     <main>
-        <section>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+        <section class="portfolio">
+            <h1>Portfolio-title</h1>
+            <ul class="portfolio-btn list">
+                <li><button type="button" class="portfolio-btn list">All</button></li>
+                <li><button type="button" class="portfolio-btn list">Web Site</button></li>
+                <li><button type="button" class="portfolio-btn list">App</button></li>
+                <li><button type="button" class="portfolio-btn list">Design</button></li>
+                <li><button type="button" class="portfolio-btn list">Marketing</button></li>
             </ul>
             <ul class="">
                 <li class="">
+                    <a href="" class="">      
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Banking App Interface Concept</h2> 
+                    <p class=""></p>App</a>
                 </li>
                 <li class="">
+                    <a href="" class="">        
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Cashless Payment</h2> 
+                    <p class="">Marketing</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Meditation App</h2> 
+                    <p class="">App</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Taxi Service</h2> 
+                    <p class="">Marketing</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">     
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Screen Illustrations</h2> 
+                    <p class="">Design</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">         
                     <im class=""g src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Online Courses</h2> 
+                    <p class="">Marketing</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">   
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Instagram Stories Concept</h2> 
+                    <p class="">Design</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">        
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Organic Food</h2> 
+                    <p class="">Web Site</p></a>
                 </li>
                 <li class="">
+                    <a href="" class="">  
                     <img class="" src="" alt=""/>
-                    <h2 class=""></h2> 
-                    <p class=""></p>
+                    <h2 class="">Fresh Coffee</h2> 
+                    <p class="">Web Site</p></a>
                 </li>
             </ul>
         </section>
