--- a/portfolio.html
+++ b/portfolio.html
@@ -46,55 +46,55 @@
                     <a href="" class="portfolio-link">      
                     <img class="portfolio-img" src="images/img.slaid-min.jpg" alt="slaid"/>
                     <h2 class="portfolio-header">Banking App Interface Concept</h2> 
-                    <p class=""></p>App</a>
+                    <p class="portfolio-text "></p>App</a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">        
                     <img class="portfolio-img" src="images/img.qc-min.jpg" alt="qc"/>
                     <h2 class="portfolio-header">Cashless Payment</h2> 
-                    <p class="">Marketing</p></a>
+                    <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">
                     <img class="" src="images/img.normalcy-min.jpg" alt="normalcy"/>
                     <h2 class="portfolio-header">Meditation App</h2> 
-                    <p class="">App</p></a>
+                    <p class="portfolio-text ">App</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">
                     <img class="portfolio-img" src="images/img.steering-min.jpg" alt="steering"/>
                     <h2 class="portfolio-header">Taxi Service</h2> 
-                    <p class="">Marketing</p></a>
+                    <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">     
                     <img class="portfolio-img" src="images/img.screen-min.jpg" alt="screen"/>
                     <h2 class="portfolio-header">Screen Illustrations</h2> 
-                    <p class="">Design</p></a>
+                    <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">         
                     <im class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile"/>
                     <h2 class="portfolio-header">Online Courses</h2> 
-                    <p class="">Marketing</p></a>
+                    <p class="portfolio-text">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">   
                     <img class="portfolio-img" src="images/img.teh-min.jpg" alt="teh"/>
                     <h2 class="portfolio-header">Instagram Stories Concept</h2> 
-                    <p class="">Design</p></a>
+                    <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">        
                     <img class="portfolio-img" src="images/img.product-min.jpg" alt="product"/>
                     <h2 class="portfolio-header">Organic Food</h2> 
-                    <p class="">Web Site</p></a>
+                    <p class="portfolio-text">Web Site</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">  
                     <img class="portfolio-img" src="images/img.coffee-min.jpg" alt="cofee"/>
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
-                    <p class="">Web Site</p></a>
+                    <p class="portfolio-text">Web Site</p></a>
                 </li>
             </ul>
         </section>
