--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">         
-                    <im class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile"/>
+                    <img class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile"/>
                     <h2 class="portfolio-header">Online Courses</h2> 
                     <p class="portfolio-text">Marketing</p></a>
                 </li>
