--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                 <li class="portfolio-til">
                     <a href="" class="portfolio-link">      
                     <img class="portfolio-img" src="images/img.slaid-min.jpg" alt="slaid"/>
-                    <h2 class="portfolio-header">Banking App Interface Concept</h2> 
+                    <h2 class="portfolio-header ">Banking App Interface Concept</h2> 
                     <p class="portfolio-text "></p>App</a>
                 </li>
                 <li class="portfolio-til">
@@ -94,7 +94,7 @@
                     <a href="" class="portfolio-link">  
                     <img class="portfolio-img" src="images/img.coffee-min.jpg" alt="cofee"/>
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
-                    <p class="portfolio-text">Web Site</p></a>
+                    <p class="portfolio-text link">Web Site</p></a>
                 </li>
             </ul>
         </section>
