--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 for Your Business</h1>
                 <button type="button" class="hero-btn">Order Service</button>
         </section>
-        <section advantages>
+        <section class="advantages">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="advantages-list list"> 
                 <li class="advantages-item">
