--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="head-nav container">
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"> <span>Web</span>Studio</a>
+            <a class="header-logo" href="./index.html"> <span>Web</span>Studio</a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html" target="_blank">Portfolio</a></li>
+                    <a class="header-link" href="./portfolio.html" target="_blank">Portfolio</a></li>
                 <li class="header-item">
                     <a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
+        </div>
         </nav>
         <address>
             <ul class="header-cont">
