--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"> <span>Web</span>Studio</a>
+            <a href="./index.html" class="header-logo"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
