--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     <main>
         <section class="portfolio">
             <h1>Portfolio-title</h1>
-            <ul class="portfolio-btn list">
+            <ul class="portfolio-btn-list">
                 <li><button type="button" class="portfolio-btn list">All</button></li>
                 <li><button type="button" class="portfolio-btn list">Web Site</button></li>
                 <li><button type="button" class="portfolio-btn list">App</button></li>
@@ -100,7 +100,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-title link"><span>Web</span>Studio</a>
+        <a href="./index.html" class="footer-title link">Web<span>Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
