--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
         <section class="portfolio">
             <h1>Portfolio-title</h1>
             <ul class="portfolio-btn-list">
-                <li><button type="button" class="portfolio-btn list">All</button></li>
-                <li><button type="button" class="portfolio-btn list">Web Site</button></li>
-                <li><button type="button" class="portfolio-btn list">App</button></li>
-                <li><button type="button" class="portfolio-btn list">Design</button></li>
-                <li><button type="button" class="portfolio-btn list">Marketing</button></li>
+                <li><button type="button" class="portfolio-btn-list list link">All</button></li>
+                <li><button type="button" class="portfolio-btn-list ">Web Site</button></li>
+                <li><button type="button" class="portfolio-btn-list list">App</button></li>
+                <li><button type="button" class="portfolio-btn-list list">Design</button></li>
+                <li><button type="button" class="portfolio-btn-list list">Marketing</button></li>
             </ul>
             <ul class="img-portfolio list">
                 <li class="portfolio-til">
