--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo"> Web<span>Studio</span></a>
+            <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
@@ -35,8 +35,8 @@
         <section class="portfolio">
             <h1>Portfolio-title</h1>
             <ul class="portfolio-btn-list">
-                <li><button type="button" class="portfolio-btn-list list link">All</button></li>
-                <li><button type="button" class="portfolio-btn-list ">Web Site</button></li>
+                <li><button type="button" class="portfolio-btn-list list ">All</button></li>
+                <li><button type="button" class="portfolio-btn-list list">Web Site</button></li>
                 <li><button type="button" class="portfolio-btn-list list">App</button></li>
                 <li><button type="button" class="portfolio-btn-list list">Design</button></li>
                 <li><button type="button" class="portfolio-btn-list list">Marketing</button></li>
