--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <nav class="header-nav">
+        <nav class="header-nav link">
             <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <address>
-            <ul class="header-cont">
+            <ul class="header-cont list">
                 <li class="header-cont-inform list"><a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-cont-inform list"><a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
             </ul>
