--- a/portfolio.html
+++ b/portfolio.html
@@ -13,85 +13,89 @@
 </head>
 <body>
     <header>
-        <nav class="header-nav">
+        <nav class="header-nav link">
             <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html" target="_blank">Portfolio</a></li>
+                    <a class="header-link" href="./index.html" target="_blank" class="nav-link link">Portfolio</a></li>
                 <li class="header-item">
                     <a class="header-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
             <ul class="header-cont">
-                <li class="header-cont-inform list"><a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-cont-inform list"><a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+                <li class="header-cont-inform list">
+                    <a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="header-cont-inform list">
+                    <a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
     </header> 
     <main>
-        <section class="portfolio">
+        <section class="portfolio list">
             <h1>Portfolio-title</h1>
-            <ul class="portfolio-btn-list">
-                <li><button type="button" class="portfolio-btn-list list ">All</button></li>
-                <li><button type="button" class="portfolio-btn-list list">Web Site</button></li>
-                <li><button type="button" class="portfolio-btn-list list">App</button></li>
-                <li><button type="button" class="portfolio-btn-list list">Design</button></li>
-                <li><button type="button" class="portfolio-btn-list list">Marketing</button></li>
+            <ul class="portfolio-btn-list list">
+                <li><button type="button" class="portfolio-btn-list">All</button></li>
+                <li><button type="button" class="portfolio-btn-list">Web Site</button></li>
+                <li><button type="button" class="portfolio-btn-list">App</button></li>
+                <li><button type="button" class="portfolio-btn-list">Design</button></li>
+                <li><button type="button" class="portfolio-btn-list">Marketing</button></li>
             </ul>
             <ul class="img-portfolio list">
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">      
+                    <a href="" class="portfolio link">      
                     <img class="portfolio-img" src="images/img.slaid-min.jpg" alt="slaid"/>
                     <h2 class="portfolio-header ">Banking App Interface Concept</h2> 
                     <p class="portfolio-text "></p>App</a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">        
+                    <a href="" class="portfolio link">        
                     <img class="portfolio-img" src="images/img.qc-min.jpg" alt="qc"/>
                     <h2 class="portfolio-header">Cashless Payment</h2> 
                     <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">
+                    <a href="" class="portfolio link">
                     <img class="" src="images/img.normalcy-min.jpg" alt="normalcy"/>
                     <h2 class="portfolio-header">Meditation App</h2> 
                     <p class="portfolio-text ">App</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">
+                    <a href="" class="portfolio link">
                     <img class="portfolio-img" src="images/img.steering-min.jpg" alt="steering"/>
                     <h2 class="portfolio-header">Taxi Service</h2> 
                     <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">     
+                    <a href="" class="portfolio link">     
                     <img class="portfolio-img" src="images/img.screen-min.jpg" alt="screen"/>
                     <h2 class="portfolio-header">Screen Illustrations</h2> 
                     <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">         
+                    <a href="" class="portfolio link">         
                     <img class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile"/>
                     <h2 class="portfolio-header">Online Courses</h2> 
                     <p class="portfolio-text">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">   
+                    <a href="" class="portfolio link">   
                     <img class="portfolio-img" src="images/img.teh-min.jpg" alt="teh"/>
                     <h2 class="portfolio-header">Instagram Stories Concept</h2> 
                     <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">        
+                    <a href="" class="portfolio link">        
                     <img class="portfolio-img" src="images/img.product-min.jpg" alt="product"/>
                     <h2 class="portfolio-header">Organic Food</h2> 
                     <p class="portfolio-text">Web Site</p></a>
                 </li>
                 <li class="portfolio-til">
-                    <a href="" class="portfolio-link">  
+                    <a href="" class="portfolio link">  
                     <img class="portfolio-img" src="images/img.coffee-min.jpg" alt="cofee"/>
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
                     <p class="portfolio-text link">Web Site</p></a>
