--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,15 @@
             <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
-                    <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
+                    <a class="header-link link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html" target="_blank" class="nav-link link">Portfolio</a></li>
+                    <a class="header-link link" href="./index.html" target="_blank" class="nav-link link">Portfolio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Contacts</a></li>
+                    <a class="header-link link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
-            <ul class="header-cont">
+            <ul class="header-cont list">
                 <li class="header-cont-inform list">
                     <a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
