--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <li class="header-item">
                     <a class="header-link" href="./portfolio.html" target="_blank" class="nav-link link">Portfolio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./index.html">Contacts</a></li>
+                    <a class="header-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contact">
             <ul class="header-cont list">
                 <li class="header-cont-inform list"><a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-cont-inform list"><a class="header-cont-inform link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
