--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
-                    <a class="header-link" href="./index.html" target="_blank">Studio</a></li>
+                    <a class="header-link link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="./portfolio.html" target="_blank" class="nav-link link">Portfolio</a></li>
+                    <a class="header-link link" href="./portfolio.html" target="_blank" class="nav-link link">Portfolio</a></li>
                 <li class="header-item">
-                    <a class="header-link" href="">Contacts</a></li>
+                    <a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contact">
