--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 <li class="header-item">
                     <a class="header-link link" href="./index.html" target="_blank" class="nav-link link">Portfolio</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./index.html">Contacts</a></li>
+                    <a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
