--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-title link"><span>Web</span>Studio</a>
+        <a href="./index.html" class="footer-title link">Web<span>Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
