--- a/portfolio.html
+++ b/portfolio.html
@@ -48,49 +48,49 @@
             <ul class="img-portfolio list">
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">      
-                    <img class="portfolio-img" src="images/img.slaid-min.jpg" alt="slaid"/>
+                    <img class="portfolio-img" src="images/img.slaid-min.jpg" alt="slaid" width="360"/>
                     <h2 class="portfolio-header ">Banking App Interface Concept</h2> 
-                    <p class="portfolio-text "></p>App</a>
+                    <p class="portfolio-text ">App</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">        
-                    <img class="portfolio-img" src="images/img.qc-min.jpg" alt="qc"/>
+                    <img class="portfolio-img" src="images/img.qc-min.jpg" alt="qc" width="360"/>
                     <h2 class="portfolio-header">Cashless Payment</h2> 
                     <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">
-                    <img class="" src="images/img.normalcy-min.jpg" alt="normalcy"/>
+                    <img class="" src="images/img.normalcy-min.jpg" alt="normalcy" width="360"/>
                     <h2 class="portfolio-header">Meditation App</h2> 
                     <p class="portfolio-text ">App</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">
-                    <img class="portfolio-img" src="images/img.steering-min.jpg" alt="steering"/>
+                    <img class="portfolio-img" src="images/img.steering-min.jpg" alt="steering" width="360"/>
                     <h2 class="portfolio-header">Taxi Service</h2> 
                     <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">     
-                    <img class="portfolio-img" src="images/img.screen-min.jpg" alt="screen"/>
+                    <img class="portfolio-img" src="images/img.screen-min.jpg" alt="screen" width="360"/>
                     <h2 class="portfolio-header">Screen Illustrations</h2> 
                     <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">         
-                    <img class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile"/>
+                    <img class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile" width="360"/>
                     <h2 class="portfolio-header">Online Courses</h2> 
                     <p class="portfolio-text">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">   
-                    <img class="portfolio-img" src="images/img.teh-min.jpg" alt="teh"/>
+                    <img class="portfolio-img" src="images/img.teh-min.jpg" alt="teh" width="360"/>
                     <h2 class="portfolio-header">Instagram Stories Concept</h2> 
                     <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">        
-                    <img class="portfolio-img" src="images/img.product-min.jpg" alt="product"/>
+                    <img class="portfolio-img" src="images/img.product-min.jpg" alt="product" width="360"/>
                     <h2 class="portfolio-header">Organic Food</h2> 
                     <p class="portfolio-text">Web Site</p></a>
                 </li>
